Enhancement
- Component API updates
- Some components improvements

Feature

- New number format (percent does not multiple/divide by 100)
- New component ListableTextBox